# wob

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  setup.sh
src/: base.py  base_test.py
src/wob/: __init__.py  base.py  base_test.py  stats.py  stats_test.py
