[project]
name = "wob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy~=1.24.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
