[project]
name = "wob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlstatkit>=0.1.91",
    "numpy~=1.24.0",
    "pandas>=2.1.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "xgboost>=3.1.3",
]
